tests/baselines/reference/intersectionTypeReadonly.errors.txt
tests/cases/conformance/types/intersection/intersectionTypeReadonly.ts(17,1): error TS2450: Left-hand side of assignment expression cannot be a constant or a read-only property.
tests/cases/conformance/types/intersection/intersectionTypeReadonly.ts(19,1): error TS2450: Left-hand side of assignment expression cannot be a constant or a read-only property.
tests/cases/conformance/types/intersection/intersectionTypeReadonly.ts(21,1): error TS2450: Left-hand side of assignment expression cannot be a constant or a read-only property.
tests/cases/conformance/types/intersection/intersectionTypeReadonly.ts(23,1): error TS2450: Left-hand side of assignment expression cannot be a constant or a read-only property.
tests/cases/conformance/types/intersection/intersectionTypeReadonly.ts(25,1): error TS2450: Left-hand side of assignment expression cannot be a constant or a read-only property.


==== tests/cases/conformance/types/intersection/intersectionTypeReadonly.ts (5 errors) ====
    interface Base {
        readonly value: number;
    }
    interface Identical {
        readonly value: number;
    }
    interface Mutable {
        value: number;
    }
    interface DifferentType {
        readonly value: string;
    }
    interface DifferentName {
        readonly other: number;
    }
    let base: Base;
    base.value = 12 // error, lhs can't be a readonly property
    ~~~~~~~~~~
!!! error TS2450: Left-hand side of assignment expression cannot be a constant or a read-only property.
    let identical: Base & Identical;
    identical.value = 12; // error, lhs can't be a readonly property
    ~~~~~~~~~~~~~~~
!!! error TS2450: Left-hand side of assignment expression cannot be a constant or a read-only property.
    let mutable: Base & Mutable;
    mutable.value = 12; // error, lhs can't be a readonly property
    ~~~~~~~~~~~~~
!!! error TS2450: Left-hand side of assignment expression cannot be a constant or a read-only property.
    let differentType: Base & DifferentType;
    differentType.value = 12; // error, lhs can't be a readonly property
    ~~~~~~~~~~~~~~~~~~~
!!! error TS2450: Left-hand side of assignment expression cannot be a constant or a read-only property.
    let differentName: Base & DifferentName;
    differentName.value = 12; // error, property 'value' doesn't exist
    ~~~~~~~~~~~~~~~~~~~
!!! error TS2450: Left-hand side of assignment expression cannot be a constant or a read-only property.
    